added section for PID settings - no input

--- a/exp_runsheet.ipynb
+++ b/exp_runsheet.ipynb
@@ -74,7 +74,7 @@
     "'H_Stress': '1, 7, 10, 20', \n",
     "'H_init_V': '0.2158', \n",
     "\n",
-    "'VertLC': '44mm Solid Horiz,\n",
+    "'VertLC': '44mm Solid Horiz',\n",
     "'V_gain': 'High', \n",
     "'V_Stress': '', \n",
     "'V_init_V': '0.2158', \n",
