--- a/runsheetTemplate.tex
+++ b/runsheetTemplate.tex
@@ -72,7 +72,7 @@
 \begin{table}[ht!]
 	\renewcommand{\arraystretch}{1.5}
 	\begin{tabular}{ |p{4cm}|p{5cm}|p{2.5cm}| p{4.75cm}| }
-	    \multicolumn{4}{l}{\textbf{\textit{Vessel Pressures:}}} \\ \hline
+	    \multicolumn{2}{l}{\textbf{\textit{Vessel Pressures:}}} & \multicolumn{2}{l}{Pore Fluid: } \\ \hline
 	    \textbf{Calibrations (V/MPa)} & \textbf{Pressures (MPa)} & \textbf{Init. Voltage} & \textbf{Volt. @ load}\\ \hline
 	    44mm Solid Horiz & \textit{\small PpA:} test & 0 & 1.00123\\ \hline
 	    44mm Solid Vert & \textit{\small PpB:} test & 1 & 2.00123\\ \hline
